--- a/dev/index.html
+++ b/dev/index.html
@@ -5,8 +5,8 @@
     <title>Monster App</title>
     <base href="/">
   </head>
-  <body ng-app="monsterApp">
-    <div class="view" ng-view=""></div>
+  <body data-ng-app="monsterApp">
+    <div class="view" data-ng-view=""></div>
 
     <!-- AngularJS v1.3.7 -->
     <script type="text/javascript"
@@ -19,10 +19,12 @@
             src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.7/angular-resource.min.js">
     </script>
 
+  <!-- build:js js/monsterapp.min.js -->
     <!-- App -->
     <script type="text/javascript" src="js/app.js"></script>
     <!-- Controllers -->
     <script type="text/javascript" src="js/controllers/dashboardController.js"></script>
     <!-- Services -->
+  <!-- endbuild -->
   </body>
 </html>
