[WIP] Create basic environment: Add Less support

--- a/dev/index.html
+++ b/dev/index.html
@@ -1,11 +1,14 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" data-ng-app="monsterApp">
   <head>
     <meta charset="utf-8">
     <title>Monster App</title>
     <base href="/">
+    <!-- build:css css/default.min.css -->
+      <link rel="stylesheet" href="css/default.css">
+    <!-- endbuild -->
   </head>
-  <body data-ng-app="monsterApp">
+  <body >
     <div class="view" data-ng-view=""></div>
 
     <!-- AngularJS v1.3.7 -->
