--- a/dev/test/index.html
+++ b/dev/test/index.html
@@ -36,6 +36,8 @@
 
     <!-- include Controllers files -->
     <script type="text/javascript" src="../js/controllers/dashboardController.js"></script>
+    <!-- include Services files -->
+    <script type="text/javascript" src="../js/services/dashboardService.js"></script>
 
 
     <!-- include spec files -->
