Add app list service

--- a/dev/index.html
+++ b/dev/index.html
@@ -40,6 +40,7 @@
     <!-- Controllers -->
     <script type="text/javascript" src="js/controllers/dashboardController.js"></script>
     <!-- Services -->
+    <script type="text/javascript" src="js/services/dashboardService.js"></script>
   <!-- endbuild -->
   </body>
 </html>
