--- a/dev/index.html
+++ b/dev/index.html
@@ -26,6 +26,9 @@
             src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.7/angular-resource.min.js">
     </script>
     <script type="text/javascript"
+            src="https://cdnjs.cloudflare.com/ajax/libs/angular-local-storage/0.1.5/angular-local-storage.min.js">
+    </script>
+    <script type="text/javascript"
             src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.2/jquery.min.js">
     </script>
     <script type="text/javascript"
