--- a/dev/test/index.html
+++ b/dev/test/index.html
@@ -30,6 +30,9 @@
     <script type="text/javascript"
             src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.7/angular-resource.min.js">
     </script>
+    <script type="text/javascript"
+            src="https://cdnjs.cloudflare.com/ajax/libs/angular-local-storage/0.1.5/angular-local-storage.min.js">
+     </script>
 
     <!-- include config files -->
     <script type="text/javascript" src="../js/app.js"></script>
